live writing fixed

--- a/dev/notebooks/scrap_and_anal.ipynb
+++ b/dev/notebooks/scrap_and_anal.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,74 +30,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found 2782 empty metadata entries\n",
-      "Restricted content warning found for https://www.instagram.com/p/DAwi632TeL2/. Skipping...\n",
-      "An error occurred while extracting metadata from https://www.instagram.com/p/C_iBgjyMqzM/: Message: no such element: Unable to locate element: {\"method\":\"xpath\",\"selector\":\"//time[@class='x1p4m5qa']\"}\n",
-      "  (Session info: chrome=130.0.6723.69); For documentation on this error, please visit: https://www.selenium.dev/documentation/webdriver/troubleshooting/errors#no-such-element-exception\n",
-      "Stacktrace:\n",
-      "\tGetHandleVerifier [0x00007FF6AAC83AB5+28005]\n",
-      "\t(No symbol) [0x00007FF6AABE83B0]\n",
-      "\t(No symbol) [0x00007FF6AAA8580A]\n",
-      "\t(No symbol) [0x00007FF6AAAD5A3E]\n",
-      "\t(No symbol) [0x00007FF6AAAD5D2C]\n",
-      "\t(No symbol) [0x00007FF6AAB1EA97]\n",
-      "\t(No symbol) [0x00007FF6AAAFBA7F]\n",
-      "\t(No symbol) [0x00007FF6AAB1B8B3]\n",
-      "\t(No symbol) [0x00007FF6AAAFB7E3]\n",
-      "\t(No symbol) [0x00007FF6AAAC75C8]\n",
-      "\t(No symbol) [0x00007FF6AAAC8731]\n",
-      "\tGetHandleVerifier [0x00007FF6AAF7643D+3118829]\n",
-      "\tGetHandleVerifier [0x00007FF6AAFC6C90+3448640]\n",
-      "\tGetHandleVerifier [0x00007FF6AAFBCF0D+3408317]\n",
-      "\tGetHandleVerifier [0x00007FF6AAD4A40B+841403]\n",
-      "\t(No symbol) [0x00007FF6AABF340F]\n",
-      "\t(No symbol) [0x00007FF6AABEF484]\n",
-      "\t(No symbol) [0x00007FF6AABEF61D]\n",
-      "\t(No symbol) [0x00007FF6AABDEB79]\n",
-      "\tBaseThreadInitThunk [0x00007FFB9BC5257D+29]\n",
-      "\tRtlUserThreadStart [0x00007FFB9CBEAF08+40]\n",
-      "\n",
-      "No metadata found for https://www.instagram.com/p/C_iBgjyMqzM/. Waiting 1 hour before retrying...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Traceback (most recent call last):\n",
-      "  File \"C:\\Users\\Alex Hoang\\AppData\\Local\\Temp\\ipykernel_34812\\467490381.py\", line 106, in extract_post_metadata\n",
-      "    date_element = driver.find_element(By.XPATH, \"//time[@class='x1p4m5qa']\")\n",
-      "  File \"d:\\Tools\\anaconda3\\envs\\scrap_anal\\lib\\site-packages\\selenium\\webdriver\\remote\\webdriver.py\", line 748, in find_element\n",
-      "    return self.execute(Command.FIND_ELEMENT, {\"using\": by, \"value\": value})[\"value\"]\n",
-      "  File \"d:\\Tools\\anaconda3\\envs\\scrap_anal\\lib\\site-packages\\selenium\\webdriver\\remote\\webdriver.py\", line 354, in execute\n",
-      "    self.error_handler.check_response(response)\n",
-      "  File \"d:\\Tools\\anaconda3\\envs\\scrap_anal\\lib\\site-packages\\selenium\\webdriver\\remote\\errorhandler.py\", line 229, in check_response\n",
-      "    raise exception_class(message, screen, stacktrace)\n",
-      "selenium.common.exceptions.NoSuchElementException: Message: no such element: Unable to locate element: {\"method\":\"xpath\",\"selector\":\"//time[@class='x1p4m5qa']\"}\n",
-      "  (Session info: chrome=130.0.6723.69); For documentation on this error, please visit: https://www.selenium.dev/documentation/webdriver/troubleshooting/errors#no-such-element-exception\n",
-      "Stacktrace:\n",
-      "\tGetHandleVerifier [0x00007FF6AAC83AB5+28005]\n",
-      "\t(No symbol) [0x00007FF6AABE83B0]\n",
-      "\t(No symbol) [0x00007FF6AAA8580A]\n",
-      "\t(No symbol) [0x00007FF6AAAD5A3E]\n",
-      "\t(No symbol) [0x00007FF6AAAD5D2C]\n",
-      "\t(No symbol) [0x00007FF6AAB1EA97]\n",
-      "\t(No symbol) [0x00007FF6AAAFBA7F]\n",
-      "\t(No symbol) [0x00007FF6AAB1B8B3]\n",
-      "\t(No symbol) [0x00007FF6AAAFB7E3]\n",
-      "\t(No symbol) [0x00007FF6AAAC75C8]\n",
-      "\t(No symbol) [0x00007FF6AAAC8731]\n",
-      "\tGetHandleVerifier [0x00007FF6AAF7643D+3118829]\n",
-      "\tGetHandleVerifier [0x00007FF6AAFC6C90+3448640]\n",
-      "\tGetHandleVerifier [0x00007FF6AAFBCF0D+3408317]\n",
-      "\tGetHandleVerifier [0x00007FF6AAD4A40B+841403]\n",
-      "\t(No symbol) [0x00007FF6AABF340F]\n",
-      "\t(No symbol) [0x00007FF6AABEF484]\n",
-      "\t(No symbol) [0x00007FF6AABEF61D]\n",
-      "\t(No symbol) [0x00007FF6AABDEB79]\n",
-      "\tBaseThreadInitThunk [0x00007FFB9BC5257D+29]\n",
-      "\tRtlUserThreadStart [0x00007FFB9CBEAF08+40]\n",
-      "\n"
+      "Found 0 empty metadata entries\n"
      ]
     }
    ],
@@ -217,7 +150,20 @@
     "    return metadata\n",
     "\n",
     "def scrape_metadata(driver, post_urls, output_file='instagram_posts_metadata.json'):\n",
-    "    data = []\n",
+    "    # Load existing data from the JSON file\n",
+    "    try:\n",
+    "        with open(output_file, 'r') as json_file:\n",
+    "            data = json.load(json_file)\n",
+    "    except (FileNotFoundError, json.JSONDecodeError):\n",
+    "        data = []\n",
+    "\n",
+    "    if data:\n",
+    "        # Remove duplicate URLs from the list of post URLs\n",
+    "        post_urls = list(set(post_urls) - set([metadata['url'] for metadata in data]))\n",
+    "\n",
+    "        # Remove metadata entries without a 'date_posted' field\n",
+    "        data = [metadata for metadata in data if metadata['date_posted']]\n",
+    "\n",
     "    for url in post_urls:\n",
     "        if len(data) % 10 == 0 and len(data) > 0:\n",
     "            wait_time = random.randint(30, 300)\n",
@@ -324,13 +270,13 @@
     "            metadata_list = [metadata for metadata in metadata_list if metadata['date_posted']]\n",
     "\n",
     "            # Add retried metadata to the list\n",
-    "            metadata_list.extend(retried_metadata_list)\n",
+    "            # metadata_list.extend(retried_metadata_list)\n",
     "\n",
-    "            metadata_json = json.dumps(metadata_list, indent=4)\n",
-    "            print(metadata_json)\n",
+    "            # metadata_json = json.dumps(metadata_list, indent=4)\n",
+    "            # print(metadata_json)\n",
     "\n",
-    "            with open('instagram_posts_metadata.json', 'w') as json_file:\n",
-    "                json_file.write(metadata_json)\n",
+    "            # with open('instagram_posts_metadata.json', 'w') as json_file:\n",
+    "            #     json_file.write(metadata_json)\n",
     "    except Exception as e:\n",
     "        print(f\"An error occurred: {e}\")\n",
     "        traceback.print_exc()\n",
