reformat directory structure

--- a/dev/notebooks/scrap_and_anal.ipynb
+++ b/dev/notebooks/scrap_and_anal.ipynb
@@ -23,14 +23,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found 0 empty metadata entries\n"
+      "Loading existing metadata...\n",
+      "An error occurred: 'date_posted'\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\Alex Hoang\\AppData\\Local\\Temp\\ipykernel_9616\\597891650.py\", line 182, in <module>\n",
+      "    metadata_list = scrape_metadata(driver, post_urls)\n",
+      "  File \"C:\\Users\\Alex Hoang\\AppData\\Local\\Temp\\ipykernel_9616\\597891650.py\", line 125, in scrape_metadata\n",
+      "    data = [metadata for metadata in data if metadata['date_posted']]\n",
+      "  File \"C:\\Users\\Alex Hoang\\AppData\\Local\\Temp\\ipykernel_9616\\597891650.py\", line 125, in <listcomp>\n",
+      "    data = [metadata for metadata in data if metadata['date_posted']]\n",
+      "KeyError: 'date_posted'\n"
      ]
     }
    ],
@@ -61,7 +76,7 @@
     "    time.sleep(random.uniform(1, 3))  # Random delay\n",
     "\n",
     "def collect_hashtag_posts(driver, hashtag, num_posts=10):\n",
-    "    driver.get(f\"https://www.instagram.com/explore/search/keyword/?q=%23{hashtag}\")\n",
+    "    driver.get(f\"https://www.instagram.com/explore/search/keyword/?q={hashtag}\")\n",
     "    time.sleep(15)\n",
     "    print(\"Page loaded\")\n",
     "\n",
@@ -71,7 +86,7 @@
     "        current_posts = len(unique_posts)\n",
     "\n",
     "        for i in range(3):\n",
-    "            simulate_user_interaction(driver)  # Simulate user behavior during scrolling\n",
+    "            # simulate_user_interaction(driver)  # Simulate user behavior during scrolling\n",
     "            driver.execute_script(\"window.scrollTo(0, document.body.scrollHeight);\")\n",
     "            time.sleep(random.uniform(2, 5))  # Random delay after each scroll\n",
     "            print(f\"Scrolled {i+1} times\")\n",
@@ -110,10 +125,8 @@
     "    return proxies\n",
     "\n",
     "def set_proxy(options, proxy):\n",
-    "    proxy_obj = Proxy()\n",
-    "    proxy_obj.proxy_type = ProxyType.MANUAL\n",
-    "    proxy_obj.socks_proxy = proxy.replace('socks4://', '')\n",
-    "    proxy_obj.add_to_capabilities(options)\n",
+    "    proxy = proxy.replace('socks4://', '')\n",
+    "    options.add_argument(f'--proxy-server=socks4://{proxy}')\n",
     "\n",
     "def extract_post_metadata(driver, post_url):\n",
     "    driver.get(post_url)\n",
@@ -153,18 +166,20 @@
     "    # Load existing data from the JSON file\n",
     "    try:\n",
     "        with open(output_file, 'r') as json_file:\n",
+    "            print(\"Loading existing metadata...\")\n",
     "            data = json.load(json_file)\n",
     "    except (FileNotFoundError, json.JSONDecodeError):\n",
-    "        data = []\n",
+    "            print(\"No existing metadata found\")\n",
+    "            data = []\n",
     "\n",
     "    if data:\n",
-    "        # Remove duplicate URLs from the list of post URLs\n",
-    "        post_urls = list(set(post_urls) - set([metadata['url'] for metadata in data]))\n",
-    "\n",
     "        # Remove metadata entries without a 'date_posted' field\n",
     "        data = [metadata for metadata in data if metadata['date_posted']]\n",
-    "\n",
+    "    \n",
     "    for url in post_urls:\n",
+    "        if any(metadata['url'] == url for metadata in data):\n",
+    "            print(f\"Metadata for {url} already exists. Skipping...\")\n",
+    "            continue\n",
     "        if len(data) % 10 == 0 and len(data) > 0:\n",
     "            wait_time = random.randint(30, 300)\n",
     "            print(f\"Pausing for {wait_time} seconds...\")\n",
@@ -175,9 +190,10 @@
     "        if metadata is None:  # If metadata is None, skip this post\n",
     "            continue\n",
     "\n",
-    "        if not metadata:  # If metadata is empty, wait and retry after an hour\n",
-    "            print(f\"No metadata found for {url}. Waiting 1 hour before retrying...\")\n",
-    "            time.sleep(3600)\n",
+    "        if not metadata:  # If metadata is empty, wait and retry randomly from 1 to 3 hours\n",
+    "            wait_time = random.randint(3600, 10800)\n",
+    "            print(f\"No metadata found for {url}. Waiting {wait_time} seconds before retrying...\")\n",
+    "            time.sleep(wait_time)\n",
     "            metadata = extract_post_metadata(driver, url)  # Retry after an hour\n",
     "\n",
     "        metadata['url'] = url\n",
@@ -190,7 +206,7 @@
     "    return data\n",
     "\n",
     "if __name__ == \"__main__\":\n",
-    "    HASHTAG = 'lashes'\n",
+    "    HASHTAG = 'lashartist'\n",
     "    service = Service(r'E:\\Tools\\chromedriver-win64\\chromedriver-win64\\chromedriver.exe')\n",
     "\n",
     "    # Fetch proxies\n",
@@ -203,86 +219,66 @@
     "    options.add_argument(f\"user-agent={get_random_user_agent()}\")  # Rotate User-Agent\n",
     "    options.binary_location = r'E:\\Tools\\chrome-win64\\chrome-win64\\chrome.exe'\n",
     "\n",
-    "    # # Session 1: Scrape post URLs with loaded cookies\n",
-    "    # driver = webdriver.Chrome(service=service, options=options)\n",
+    "    # Session 1: Scrape post URLs with loaded cookies\n",
     "\n",
-    "    # try:\n",
-    "    #     driver.get(\"https://www.instagram.com/\")\n",
-    "    #     print(\"Waiting for login...\")\n",
-    "    #     time.sleep(3)\n",
     "\n",
-    "    #     load_cookies_from_file(driver, \"cookies.json\")\n",
-    "    #     time.sleep(5)\n",
-    "    #     driver.refresh()\n",
-    "    #     print(\"Cookies loaded\")\n",
     "\n",
-    "    #     if \"login\" in driver.current_url:\n",
-    "    #         print(\"Session is not valid. Please check the cookies.\")\n",
-    "    #     else:\n",
-    "    #         post_urls = collect_hashtag_posts(driver, HASHTAG, 10000)\n",
     "\n",
-    "    # except Exception as e:\n",
-    "    #     print(f\"An error occurred: {e}\")\n",
-    "    #     traceback.print_exc()\n",
+    "    # Session 2: Scrape post metadata without loading cookies\n",
     "\n",
-    "    # finally:\n",
-    "    #     driver.quit()\n",
-    "\n",
-    "    # # Session 2: Scrape post metadata without loading cookies\n",
-    "    # for proxy in proxies:\n",
-    "    #     set_proxy(options, proxy)\n",
-    "    #     driver = webdriver.Chrome(service=service, options=options)\n",
-    "\n",
-    "    #     try:\n",
-    "    #         with open('instagram_posts_urls_10000.json', 'r') as json_file:\n",
-    "    #             post_urls = json.load(json_file)\n",
-    "    #         metadata_list = scrape_metadata(driver, post_urls)\n",
-    "\n",
-    "    #         metadata_json = json.dumps(metadata_list, indent=4)\n",
-    "    #         print(metadata_json)\n",
-    "            \n",
-    "    #         with open('instagram_posts_metadata.json', 'w') as json_file:\n",
-    "    #             json_file.write(metadata_json)\n",
-    "\n",
-    "    #     except Exception as e:\n",
-    "    #         print(f\"An error occurred: {e}\")\n",
-    "    #         traceback.print_exc()\n",
-    "\n",
-    "    #     finally:\n",
-    "    #         driver.quit()\n",
-    "\n",
-    "    # Session 3: Check if there are empty metadata entries and retry, if necessary\n",
     "    driver = webdriver.Chrome(service=service, options=options)\n",
     "\n",
     "    try:\n",
-    "        with open('instagram_posts_metadata.json', 'r') as json_file:\n",
-    "            metadata_list = json.load(json_file)\n",
+    "        with open('instagram_posts_urls_10000.json', 'r') as json_file:\n",
+    "            post_urls = json.load(json_file)\n",
+    "        metadata_list = scrape_metadata(driver, post_urls)\n",
     "\n",
-    "        # Identify empty metadata entries based on the 'date_posted' field\n",
-    "        empty_metadata = [metadata for metadata in metadata_list if not metadata['date_posted']]\n",
-    "        print(f\"Found {len(empty_metadata)} empty metadata entries\")\n",
+    "        metadata_json = json.dumps(metadata_list, indent=4)\n",
+    "        print(metadata_json)\n",
+    "        \n",
+    "        with open('instagram_posts_metadata.json', 'w') as json_file:\n",
+    "            json_file.write(metadata_json)\n",
     "\n",
-    "        if empty_metadata:\n",
-    "            post_urls = [metadata['url'] for metadata in empty_metadata]\n",
-    "            retried_metadata_list = scrape_metadata(driver, post_urls)\n",
-    "\n",
-    "            # Remove empty metadata entries from the original list\n",
-    "            metadata_list = [metadata for metadata in metadata_list if metadata['date_posted']]\n",
-    "\n",
-    "            # Add retried metadata to the list\n",
-    "            # metadata_list.extend(retried_metadata_list)\n",
-    "\n",
-    "            # metadata_json = json.dumps(metadata_list, indent=4)\n",
-    "            # print(metadata_json)\n",
-    "\n",
-    "            # with open('instagram_posts_metadata.json', 'w') as json_file:\n",
-    "            #     json_file.write(metadata_json)\n",
     "    except Exception as e:\n",
     "        print(f\"An error occurred: {e}\")\n",
     "        traceback.print_exc()\n",
     "\n",
     "    finally:\n",
-    "        driver.quit()"
+    "        driver.quit()\n",
+    "\n",
+    "    # Session 3: Check if there are empty metadata entries and retry, if necessary\n",
+    "\n",
+    "    # driver = webdriver.Chrome(service=service, options=options)\n",
+    "\n",
+    "    # try:\n",
+    "    #     with open('instagram_posts_metadata.json', 'r') as json_file:\n",
+    "    #         metadata_list = json.load(json_file)\n",
+    "\n",
+    "    #     # Identify empty metadata entries based on the 'date_posted' field\n",
+    "    #     empty_metadata = [metadata for metadata in metadata_list if not metadata['date_posted']]\n",
+    "    #     print(f\"Found {len(empty_metadata)} empty metadata entries\")\n",
+    "\n",
+    "    #     if empty_metadata:\n",
+    "    #         post_urls = [metadata['url'] for metadata in empty_metadata]\n",
+    "    #         retried_metadata_list = scrape_metadata(driver, post_urls)\n",
+    "\n",
+    "    #         # Remove empty metadata entries from the original list\n",
+    "    #         # metadata_list = [metadata for metadata in metadata_list if metadata['date_posted']]\n",
+    "\n",
+    "    #         # Add retried metadata to the list\n",
+    "    #         # metadata_list.extend(retried_metadata_list)\n",
+    "\n",
+    "    #         # metadata_json = json.dumps(metadata_list, indent=4)\n",
+    "    #         # print(metadata_json)\n",
+    "\n",
+    "    #         # with open('instagram_posts_metadata.json', 'w') as json_file:\n",
+    "    #         #     json_file.write(metadata_json)\n",
+    "    # except Exception as e:\n",
+    "    #     print(f\"An error occurred: {e}\")\n",
+    "    #     traceback.print_exc()\n",
+    "\n",
+    "    # finally:\n",
+    "    #     driver.quit()\n"
    ]
   }
  ],
